force-app/main/default/objects/Aeroporto__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Localizacao__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Estado</value>
        </filterItems>
        <filterItems>
            <field>Localizacao__c.Pertence__c</field>
            <operation>equals</operation>
            <valueField>$Source.Pais__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Localizacao__c</referenceTo>
    <relationshipLabel>Aeroportos (Estado)</relationshipLabel>
    <relationshipName>Aeroportos1</relationshipName>
    <type>Lookup</type>
</CustomField>