force-app/main/default/objects/Aeroporto__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Localizacao__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>País</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Localizacao__c</referenceTo>
    <relationshipLabel>Aeroportos</relationshipLabel>
    <relationshipName>Aeroportos</relationshipName>
    <type>Lookup</type>
</CustomField>