force-app/main/default/objects/Aeroporto__c/fields/Sigla__c.field-meta.xml
<CustomField>
    <fullName>Sigla__c</fullName>
    <label>Sigla</label>
    <length>10</length>
    <type>Text</type>
</CustomField>